revert trigger route
