# docs/swagger.json
@@ -1127,26 +1127,6 @@
                 }
             }
         },
-        "/trigger/download": {
-            "get": {
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Triggers"
-                ],
-                "summary": "Trigger downloads",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": true
-                        }
-                    }
-                }
-            }
-        },
         "/vods/": {
             "get": {
                 "consumes": [
